hphp/hack/test/typecheck/super_constraint_5.php.exp
File "super_constraint_5.php", line 9, characters 10-13:
Invalid return type (Typing[4110])
File "super_constraint_5.php", line 5, characters 38-40:
This is an object of type Foo
File "super_constraint_5.php", line 5, characters 49-51:
It is incompatible with a value of generic type Ty1
File "super_constraint_5.php", line 5, characters 23-25:
Considering the constraint on 'Tx1'
File "super_constraint_5.php", line 8, characters 4-5:
Considering the constraint on 'Tx'
File "super_constraint_5.php", line 6, characters 3-4:
Considering the constraint on 'Ty'
